[package]
name = "qshare"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/daedalus2022/qshare"
keywords = ["stock", "quantization", "futures"]
categories = ["quantization"]
rust-version = "1.74.0"
readme = "README.md"
description = "量化数据：股票、期货等"
license = "Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 错误处理
anyhow = "1"

# 命令行解析
clap = { version = "3", features = ["derive"] }

# 命令行高亮
colored = "2.0.0"

# JSON pretty print 格式化
jsonxf = "1.1.1"

# 处理mime类型
mime = "0.3.16"

# 高性能http客户端
reqwest = { version = "0.11.14", features = ["json"] }

# 语法高亮
syntect = "5.1.0"

# 异步处理
tokio = { version = "1.25.0", features=["full"]}

## 数据读取 https://pola-rs.github.io/polars/user-guide/installation/#rust
polars = { version = "0.27.2", features = ["lazy", "temporal", "describe", "json", "parquet", "dtype-datetime", "csv-file"] }

## json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"

## 特征异步
async-trait = "0.1.74"

# log
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

# env
dotenvy = "0.15"

# md5
md5 = "0.7.0"

# csv
csv = { version = "1.1", features = [] }

# 进度条
pbr = "1.0.3"